--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Chat Simples</title>
 <style>
+h1{
+ text-aling: center;
+}
     body {
         font-family: Arial, sans-serif;
         background-color: #f0f0f0;
