--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <title>Chat Simples</title>
 <style>
  h1{
-  text-aling: center;
+  text-align: center;
+  color: rainbow;
 }
     body {
         font-family: Arial, sans-serif;
